3B - NEW_DESIGN - SHOPPING_CART_MOBILE - update plus/minus/del buttons

--- a/3B-WEB/NEW_DESIGN/mobile/shopping-cart.html
+++ b/3B-WEB/NEW_DESIGN/mobile/shopping-cart.html
@@ -196,13 +196,18 @@
 							<div class="p-info">
 								<div class="p-title boxes">
 									<h4 class="wrap-line twoline">Lorem isum dorlor set amit der bort tivo loxo cogian rất là dài mà chưa có ba chấm thì lạ thật</h4>
-									<label>x1</label>
+									<label><a href="#"><img src="../../assets/images/new-design/icons-svg/close.svg"></a></label>
 								</div>
 								<div class="p-price with-sale boxes wrap">
 									<span class="p-sale wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 									<span class="p-old wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 								</div>
 								<div class="p-meta">Size: M | Color: Green</div>
+								<div class="p-quantity boxes">
+									<button class="minus">-</button>
+									<span>1</span>
+									<button class="plus">+</button>
+								</div>
 								<ul class="p-extra">
 									<li>Buy method: <span class="txt-green">persional</span></li>
 									<li>Status: <span class="txt-green">Waiting grafted</span></li>
@@ -223,13 +228,18 @@
 							<div class="p-info">
 								<div class="p-title boxes">
 									<h4 class="wrap-line twoline">Lorem isum dorlor set amit der bort tivo loxo cogian rat la dai</h4>
-									<label>x1</label>
+									<label><a href="#"><img src="../../assets/images/new-design/icons-svg/close.svg"></a></label>
 								</div>
 								<div class="p-price with-sale boxes wrap">
 									<span class="p-sale wrap-line w-break">989,000đ</span>
 									<span class="p-old wrap-line w-break">100,989,000đ</span>
 								</div>
 								<div class="p-meta">Size: M | Color: Green</div>
+								<div class="p-quantity boxes">
+									<button class="minus">-</button>
+									<span>1</span>
+									<button class="plus">+</button>
+								</div>
 								<ul class="p-extra">
 									<li>Buy method: <span class="txt-green">persional</span></li>
 									<li>Status: <span class="txt-green">Waiting grafted</span></li>
@@ -272,13 +282,18 @@
 							<div class="p-info">
 								<div class="p-title boxes">
 									<h4 class="wrap-line twoline">Lorem isum dorlor set amit der bort tivo loxo cogian rất là dài mà chưa có ba chấm thì lạ thật</h4>
-									<label>x1</label>
+									<label><a href="#"><img src="../../assets/images/new-design/icons-svg/close.svg"></a></label>
 								</div>
 								<div class="p-price with-sale boxes wrap">
 									<span class="p-sale wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 									<span class="p-old wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 								</div>
 								<div class="p-meta">Size: M | Color: Green</div>
+								<div class="p-quantity boxes">
+									<button class="minus">-</button>
+									<span>1</span>
+									<button class="plus">+</button>
+								</div>
 								<ul class="p-extra">
 									<li>Buy method: <span class="txt-green">persional</span></li>
 									<li>Status: <span class="txt-green">Waiting grafted</span></li>
@@ -299,13 +314,18 @@
 							<div class="p-info">
 								<div class="p-title boxes">
 									<h4 class="wrap-line twoline">Lorem isum dorlor set amit der bort tivo loxo cogian rat la dai</h4>
-									<label>x1</label>
+									<label><a href="#"><img src="../../assets/images/new-design/icons-svg/close.svg"></a></label>
 								</div>
 								<div class="p-price with-sale boxes wrap">
 									<span class="p-sale wrap-line w-break">989,000đ</span>
 									<span class="p-old wrap-line w-break">100,989,000đ</span>
 								</div>
 								<div class="p-meta">Size: M | Color: Green</div>
+								<div class="p-quantity boxes">
+									<button class="minus">-</button>
+									<span>1</span>
+									<button class="plus">+</button>
+								</div>
 								<ul class="p-extra">
 									<li>Buy method: <span class="txt-green">persional</span></li>
 									<li>Status: <span class="txt-green">Waiting grafted</span></li>
