3B - NEW_DESIGN - HOME_MOBILE - update hot today

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -510,111 +510,47 @@
 				<a href="product-hot-today.html">Xem tất cả</a>
 			</div>
 
-			<div class="boxes wrap scroll-x">
-				<div class="box-p">
-					<div class="box-p-wrap">
-						<div class="box-p-img">
-							<a href="#"><img src="../../assets/images/img29.jpg"></a>
-							<span class="rating-label">-50%</span>
-						</div>
-						<div class="box-p-meta">
-							<div class="store-info">
-								<div class="store-name">
-									<img src="../../assets/images/img30.jpg">
-									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-								</div>
-							</div>
-							<div class="p-name">
-								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price wrap-line w-break">1.125.000đ</span>
-							</div>
-							<div class="p-rating">
-								<img src="../../assets/images/new-design/icons/star.png">
-								<span class="point">4.0</span>
-								<span class="count">(200 ratings)</span>
-							</div>
-						</div>
+			<!-- BEGIN LIST ITEM -->
+			<div class="list-item boxes scroll-x">
+				<!-- <div class="boxes"> -->
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img29.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">100,125,000 đ</h4>
 					</div>
-				</div><!-- /end product -->
-
-				<div class="box-p">
-					<div class="box-p-wrap">
-						<div class="box-p-img">
-							<a href="#"><img src="../../assets/images/img29.jpg"></a>
-							<span class="rating-label">-50%</span>
-						</div>
-						<div class="box-p-meta">
-							<div class="store-info">
-								<div class="store-name">
-									<img src="../../assets/images/img30.jpg">
-									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-								</div>
-							</div>
-							<div class="p-name">
-								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price wrap-line w-break">189,000đ - 195,000đ</span>
-							</div>
-							<div class="p-rating">
-								<img src="../../assets/images/new-design/icons/star.png">
-								<span class="point">4.0</span>
-								<span class="count">(200 ratings)</span>
-							</div>
-						</div>
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img30.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">800,000đ - 1,000,000đ</h4>
 					</div>
-				</div><!-- /end product -->
-
-				<div class="box-p">
-					<div class="box-p-wrap">
-						<div class="box-p-img">
-							<a href="#"><img src="../../assets/images/img30.jpg"></a>
-							<span class="rating-label">-50%</span>
-						</div>
-						<div class="box-p-meta">
-							<div class="store-info">
-								<div class="store-name">
-									<img src="../../assets/images/img30.jpg">
-									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-								</div>
-							</div>
-							<div class="p-name">
-								<a href="#"><h4 class="wrap-line twoline">Ngắn vch</h4></a>
-								<span class="p-price wrap-line w-break">1,989,000đ - 2,195,000đ</span>
-							</div>
-							<div class="p-rating">
-								<img src="../../assets/images/new-design/icons/star.png">
-								<span class="point">4.0</span>
-								<span class="count">(200 ratings)</span>
-							</div>
-						</div>
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img29.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">125,000 đ</h4>
 					</div>
-				</div><!-- /end product -->
-
-				<div class="box-p">
-					<div class="box-p-wrap">
-						<div class="box-p-img">
-							<a href="#"><img src="../../assets/images/img30.jpg"></a>
-							<span class="rating-label">-50%</span>
-						</div>
-						<div class="box-p-meta">
-							<div class="store-info">
-								<div class="store-name">
-									<img src="../../assets/images/img30.jpg">
-									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
-								</div>
-							</div>
-							<div class="p-name">
-								<a href="#"><h4 class="wrap-line twoline">Dài vừa vừa những cũng 2 dòng</h4></a>
-								<span class="p-price wrap-line w-break">189,000đ - 195,000đ</span>
-							</div>
-							<div class="p-rating">
-								<img src="../../assets/images/new-design/icons/star.png">
-								<span class="point">4.0</span>
-								<span class="count">(200 ratings)</span>
-							</div>
-						</div>
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img30.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">100,800,000đ - 201,000,000đ</h4>
 					</div>
-				</div><!-- /end product -->
-			</div><!-- /end boxes -->
+					<div class="item">
+						<a href="#">
+							<img class="p-image" src="../../assets/images/img30.jpg">
+							<span class="sale-label">-34%</span>
+						</a>
+						<h4 class="p-price wrap-line w-break">800,000đ - 1,000,000đ</h4>
+					</div>
+				<!-- </div> -->
+			</div>
+			<!-- /END LIST ITEM -->
 		</div>
 		<!-- /END HOT TODAY -->
 
