3B - PHASE 9 - up some style and pages on PC + MOBILE

--- a/3B-WEB/NEW_DESIGN/mobile/product-details.html
+++ b/3B-WEB/NEW_DESIGN/mobile/product-details.html
@@ -165,8 +165,14 @@
 		<!-- BEGIN PRODUCT DETAILS -->
 		<div class="product-details">
 			<div class="p-galleries">
+				<span class="tag-lbl">Hàng cũ</span>
 				<img src="../../assets/images/product-details/s2.jpg">
 				<div class="g-bullets-numb">1/7</div>
+
+				<div class="out-of-stock boxes">
+					<span>Hết hàng</span>
+					<a href="#">Nhận thông báo khi có hàng</a>
+				</div>
 			</div><!-- /end galleries -->
 
 			<div class="p-hot-sale">
@@ -217,7 +223,10 @@
 				</div>
 
 				<div class="p-share boxes">
-					<label>Chia sẻ</label>
+					<div class="liked boxes">
+						<img src="../../assets/images/new-design/icons-svg/heart.svg">
+						<label>Đã thích (1,4k)</label>
+					</div>
 					<div class="socials">
 						<ul>
 							<li class="fb"><a href="#"><i class="fa fa-facebook"></i></a></li>
