--- a/3B-WEB/NEW_DESIGN/mobile/store-view-product-secondhand.html
+++ b/3B-WEB/NEW_DESIGN/mobile/store-view-product-secondhand.html
@@ -150,106 +150,92 @@
 				<!-- /END SEARCH PRODUCT RESULT -->
 			</div>
 			<!-- /END ADVANCE SEARCH -->
-
-			<div class="store-home container">
-				<div class="boxes head">
-					<div class="details boxes">
-						<div class="box-img"><img src="../../assets/images/img29.jpg"></div>
-
-						<div class="s-title">
-							<h3><span class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</span></h3>
-							<div class="meta">
-								<label>Online</label>
-							</div>
-						</div>
-					</div>
-					<div class="actions boxes">
-						<a href="#" class="btn btn-border-b">Theo dõi</a>
-						<a href="#" class="btn btn-border-b">Xem shop</a>
-					</div>
-				</div><!-- /end head -->
-
-				<div class="states">
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/product-4.png"> 12016</div>
-							<label>Sản phẩm</label>
-						</div>
-						<div class="item">
-							<div class="total"><img src="../../assets/images/new-design/icons/star-7.png"> 5.0</div>
-							<label>Đánh Giá</label>
-						</div>
-						<div class="item">
-							<div class="total">11198</div>
-							<label>Người theo dõi</label>
-						</div>
-						<div class="item">
-							<div class="total">2 ngày</div>
-							<label>Chuẩn bị hàng</label>
-						</div>
-					</div><!-- /end states -->
-			</div>
 		</header>
 		<!-- /END HEADER -->
 
-		<div class="store-home-page">
-			<div class="menu-mobile container page">
-				<ul class="menu-container scroll-x">
-					<li><a href="store-home.html">Shop</a></li>
-					<li><a href="store-all-product.html">Sản phẩm</a></li>
-					<li><a href="store-best-selling.html">Sản phẩm bán chạy</a></li>
-					<li><a href="store-list-category.html">Danh mục</a></li>
-				</ul>
-			</div><!-- /end nav -->
+		<!-- BEGIN BREADCRUMB -->
+		<div class="breadcrumb scroll-x bg-anti-flash margin-b10">
+			<ul>
+				<li><a href="home.html">Trang chủ</a></li>
+				<li class="wrap-line">Tìm kiếm sản phẩm</li>
+			</ul>
+		</div>
+		<!-- /END BREADCRUMB -->
 
-			<div class="s-voucher">
-				<h4>Voucher của shop</h4>
-				<div class="promote boxes wrap">
-					<div class="item">
-						<div class="item-top"><span>-10$</span>Discount</div>
-						<div class="item-bot">Lưu voucher</div>
-					</div>
-					<div class="item">
-						<div class="item-top"><span>-20$</span>Discount</div>
-						<div class="item-bot">Lưu voucher</div>
-					</div>
-					<div class="item">
-						<div class="item-top"><span>-30$</span>Discount</div>
-						<div class="item-bot">Lưu voucher</div>
-					</div>
-					<div class="item">
-						<div class="item-top"><span>-10$</span>Discount</div>
-						<div class="item-bot">Lưu voucher</div>
-					</div>
-					<div class="item">
-						<div class="item-top"><span>-20$</span>Discount</div>
-						<div class="item-bot">Lưu voucher</div>
-					</div>
-					<div class="item">
-						<div class="item-top"><span>-30$</span>Discount</div>
-						<div class="item-bot">Lưu voucher</div>
+		<div class="store-home-page container">
+
+			<div class="boxes filter">
+				<div class="price">
+					<div class="title"><h3>Giá</h3></div>
+					<div class="boxes">
+						<input type="text" name="min" placeholder="min" class="box-control">
+						<input type="text" name="max" placeholder="max" class="box-control">
 					</div>
 				</div>
-			</div><!-- /end voucher -->
+				<div class="rating boxes">
+					<label>Đánh giá</label>
+					<ul class="stars">
+						<li><img src="../../assets/images/new-design/icons/star-3.png"></li>
+						<li><img src="../../assets/images/new-design/icons/star-3.png"></li>
+						<li><img src="../../assets/images/new-design/icons/star-3.png"></li>
+						<li><img src="../../assets/images/new-design/icons/star-4.png"></li>
+						<li><img src="../../assets/images/new-design/icons/star-4.png"></li>
+					</ul>
+				</div>
+			</div><!-- /end filter -->
 
-			<div class="banner">
-				<img src="../../assets/images/new-design/banner.jpg">
+			<div class="list-cat-2 discount">
+				<div class="title"><h3>Giảm giá</h3></div>
+				<ul>
+					<li>
+						<div class="chk">
+							<input type="checkbox" name="chk7" id="chk7" class="chk-custom">
+							<label for="chk7" class="chk-custom-label">Giảm 10%</label>
+						</div>
+					</li>
+					<li>
+						<div class="chk">
+							<input type="checkbox" name="chk8" id="chk8" class="chk-custom">
+							<label for="chk8" class="chk-custom-label">Giảm 30%</label>
+						</div>
+					</li>
+					<li>
+						<div class="chk">
+							<input type="checkbox" name="chk9" id="chk9" class="chk-custom">
+							<label for="chk9" class="chk-custom-label">Giảm 50%</label>
+						</div>
+					</li>
+					<li>
+						<div class="chk">
+							<input type="checkbox" name="chk10" id="chk10" class="chk-custom">
+							<label for="chk10" class="chk-custom-label">Giảm 60%</label>
+						</div>
+					</li>
+					<li>
+						<div class="chk">
+							<input type="checkbox" name="chk11" id="chk11" class="chk-custom">
+							<label for="chk11" class="chk-custom-label">Giảm 80%</label>
+						</div>
+					</li>
+					<li>
+						<div class="chk">
+							<input type="checkbox" name="chk12" id="chk12" class="chk-custom">
+							<label for="chk12" class="chk-custom-label">Giảm 100%</label>
+						</div>
+					</li>
+				</ul>
+			</div><!-- /end discount -->
+
+			<div class="last-section">
+				<div class="actions boxes">
+					<button class="btn btn-normal">Áp dụng</button>
+				</div>
 			</div>
 
-			<div class="s-description">
-				<div class="title">
-					<h3>Giới thiệu</h3>
-				</div>
-
-				<div class="description">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-					<div class="gradient-transparent-to-white-vertical"><a href="#">Xem thêm <i class="fa fa-angle-down"></i></a></div>
-				</div>
-			</div><!-- /end description -->
-
-			<div class="results container">
+			<div class="results">
 				<!-- BEGIN CONTROL RESULT -->
 				<div class="boxes wrap margin-b20">
-					<div class="title"><h3>Các sản phẩm của shop</h3></div>
+					<div class="title"><h3>Kết quả tìm kiếm (1200)</h3></div>
 					<div class="filter-bl boxes wrap">
 						<div class="filter small">
 							<label>Sort by:</label>
@@ -280,6 +266,7 @@
 								<div class="box-p-img">
 									<a href="#"><img src="../../assets/images/img29.jpg"></a>
 									<span class="rating-label">-50%</span>
+									<span class="tag-lbl">Hàng cũ</span>
 								</div>
 								<div class="box-p-meta">
 									<div class="store-info">
