--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -94,6 +94,13 @@
 							<li><a href="from-1k.html">From 1k</a></li>
 						</ul>
 					</div>
+
+					<div class="p9">
+						<h5>Phase 9</h5>
+						<ul>
+							<li><a href="view-product-secondhand.html">Secondhand</a></li>
+						</ul>
+					</div>
 				</div>
 				<div class="col-md-4">
 					<h1>NEW DESIGN - PC</h1>
@@ -137,6 +144,7 @@
 						<li><a href="NEW_DESIGN/mobile/shopping-cart-empty.html">Shopping Cart Empty</a></li>
 						<li><a href="NEW_DESIGN/mobile/pin-code.html">Pin Code</a></li>
 						<li><a href="NEW_DESIGN/mobile/login.html">Login</a></li>
+						<li><a href="NEW_DESIGN/mobile/store-view-product-secondhand.html">Secondhand</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
