--- a/3B-WEB/product-details.html
+++ b/3B-WEB/product-details.html
@@ -307,9 +307,20 @@
 							<div class="left-t"><i class="fa fa-angle-left"></i></div>
 							<div class="right-t"><i class="fa fa-angle-right"></i></div>
 						</div>
+
+						<span class="tag-lbl">Hàng cũ</span>
+
+						<div class="out-of-stock boxes">
+							<span>Hết hàng</span>
+							<a href="#">Nhận thông báo khi có hàng</a>
+						</div>
 					</div>
 
 					<div class="share-link">
+						<div class="liked boxes">
+							<img src="assets/images/new-design/icons-svg/heart.svg">
+							<label>Đã thích (1,4k)</label>
+						</div>
 						<ul class="socials">
 							<li>Share</li>
 							<li class="facebook"><a class="btn-perspective" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -506,11 +517,13 @@
 
 						<!-- BEGIN QUALITY -->
 						<div class="quality">
-							<div class="quanlity-block">
-								<label class="pull-left">Quality</label>
-								<button class="btn btn-default">-</button>
-								<span>1</span>
-								<button class="btn btn-default">+</button>
+							<div class="quality-block">
+								<label>Quality</label>
+								<div class="control">
+									<button class="btn btn-default minus">-</button>
+									<span>1</span>
+									<button class="btn btn-default plus">+</button>
+								</div>
 							</div>
 							<label class="error-msg"><i class="fa fa-exclamation"></i> Văn bản lỗi hiển thị</label>
 						</div>
