3B - PHASE 9 - update style

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -94,18 +94,14 @@
 							<li><a href="from-1k.html">From 1k</a></li>
 						</ul>
 					</div>
-
-					<div class="p9">
-						<h5>Phase 9</h5>
-						<ul>
-							<li><a href="view-product-secondhand.html">Secondhand</a></li>
-						</ul>
-					</div>
 				</div>
 				<div class="col-md-4">
 					<h1>NEW DESIGN - PC</h1>
 					<ul>
 						<li><a href="NEW_DESIGN/pc/home.html">Home</a></li>
+						<li><a href="view-product-secondhand.html">Secondhand</a></li>
+						<li><a href="favorite-product.html">Favorite Products</a></li>
+						<li><a href="store-follower.html">Store Follower</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
@@ -145,6 +141,8 @@
 						<li><a href="NEW_DESIGN/mobile/pin-code.html">Pin Code</a></li>
 						<li><a href="NEW_DESIGN/mobile/login.html">Login</a></li>
 						<li><a href="NEW_DESIGN/mobile/store-view-product-secondhand.html">Secondhand</a></li>
+						<li><a href="NEW_DESIGN/mobile/product-favorite.html">Favorite Products</a></li>
+						<li><a href="NEW_DESIGN/mobile/store-follower.html">Store Follower</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
