--- a/3B-WEB/view-product-secondhand.html
+++ b/3B-WEB/view-product-secondhand.html
@@ -20,54 +20,37 @@
 
 </head>
 
-<body>
+<body class="new-theme">
 
 	<!-- BEGIN HEADER -->
 	<header>
-		<!-- BEGIN TOP NAV -->
-		<div class="topbar">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<ul class="hotline pull-left">
-							<li>Hotline: 1900 1902</li>
-							<li><a href="#">Help Center</a></li>
-							<li><a href="#">Download App</a></li>
-						</ul>
-					</div>
-					<div class="col-md-6">
-						<ul class="notification pull-right">
-							<li>
-								<a href="#">
-									<img src="assets/images/svg/bell.svg">
-									<span>Notification</span>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/svg/united-states.svg">
-									<i class="fa fa-angle-down"></i>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</div>
+		<div class="content-wrapper container">
+			<!-- BEGIN TOP NAV -->
+			<div class="topbar hide-on-mobile">
+				<ul>
+					<li>Hotline: 1900 1902</li>
+					<li><a href="#">Tải ứng dụng</a></li>
+					<li><a href="#">Hỗ trợ</a></li>
+				</ul>
+				<ul>
+					<li><a href="#">Thông báo (10)</a></li>
+					<li><a href="#">Ngôn ngữ</a></li>
+					<li><a href="#">Đăng ký</a></li>
+					<li><a href="#">Đăng nhập</a></li>
+					<li><a href="#"><img src="assets/images/img29.jpg"><h5 class="wrap-line">Tên sử dụng siêu dài</h5></a><span class="margin-r8">/</span><a href="#">Đăng xuất</a></li>
+				</ul>
 			</div>
-		</div>
-		<!-- /END TOP NAV -->
+			<!-- /END TOP NAV -->
 
-		<!-- BEGIN HEADER -->
-		<div class="header">
-			<div class="container">
+			<!-- BEGIN HEADER -->
+			<div class="header">
 				<div class="row">
 					<div class="col-md-2 col-xs-2">
 						<!-- BEGIN LOGO -->
-						<div class="logo">
-							<h1><a href="index.html"><img src="assets/images/logo.png"></a></h1>
-						</div>
+						<h1 class="logo txt-center"><a href="index.html"><img src="assets/images/new-design/icons/logo-3b.png"></a></h1>
 						<!-- /END LOGO -->
 					</div>
-					<div class="col-md-7 col-xs-10">
+					<div class="col-md-8 col-xs-7">
 						<!-- BEGIN SEARCH BOX -->
 						<div class="search-box">
 							<div class="input-group margin">
@@ -219,41 +202,27 @@
 									<!-- /END SEARCH PRODUCT BLOCK -->
 								</div>
 								<span class="input-group-btn">
-									<button type="button" class="btn btn-success"><img src="assets/images/svg/search.svg"></button>
+									<button type="button" class="btn"><img src="assets/images/new-design/icons/search.png"></button>
 								</span>
 							</div>
 						</div>
 						<!-- /END SEARCH BOX -->
 					</div>
-					<div class="col-md-3">
-						<div class="col-xs-6 nopadding">
-							<!-- BEGIN ACCOUNT -->
-							<div class="header-info account margin">
-								<img class="pull-left" src="assets/images/svg/user.svg">
-								<ul>
-									<li><a href="#">account</a></li>
-									<li><a href="#">login/signup</a></li>
-								</ul>
-								<div class="clearfix"></div>
-							</div>
-							<!-- /END ACCOUNT -->
+					<div class="col-md-2 col-xs-3">
+						<!-- BEGIN CART -->
+						<div class="cart txt-center">
+							<a href="#">
+								<img src="assets/images/new-design/icons/cart.png">
+								<span>Giỏ hàng</span>
+								<span class="total">99</span>
+							</a>
 						</div>
-						<div class="col-xs-6 nopadding">
-							<!-- BEGIN CART -->
-							<div class="header-info cart margin">
-								<img class="pull-left" src="assets/images/svg/shopping-cart-empty.svg">
-								<ul>
-									<li><a href="#">CART</a></li>
-								</ul>
-								<div class="clearfix"></div>
-							</div>
-							<!-- /END CART -->
-						</div>
+						<!-- /END CART -->
 					</div>
 				</div>
 			</div>
+			<!-- /END HEADER -->
 		</div>
-		<!-- /END HEADER -->
 	</header>
 	<!-- /END HEADER -->
 
