3B - PHASE 9 - update style

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -102,6 +102,7 @@
 						<li><a href="view-product-secondhand.html">Secondhand</a></li>
 						<li><a href="favorite-product.html">Favorite Products</a></li>
 						<li><a href="store-follower.html">Store Follower</a></li>
+						<li><a href="search-product-top.html">Search Product Top</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
@@ -143,6 +144,7 @@
 						<li><a href="NEW_DESIGN/mobile/store-view-product-secondhand.html">Secondhand</a></li>
 						<li><a href="NEW_DESIGN/mobile/product-favorite.html">Favorite Products</a></li>
 						<li><a href="NEW_DESIGN/mobile/store-follower.html">Store Follower</a></li>
+						<li><a href="NEW_DESIGN/mobile/search-product-top.html">Search Product Top</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
