--- a/3B-WEB/search-product-top.html
+++ b/3B-WEB/search-product-top.html
@@ -233,8 +233,7 @@
 				<div class="col-md-12">
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">All Category</a></li>
-						<li>Electronic Devices</li>
+						<li>Tìm kiếm hàng đầu</li>
 					</ul> 
 				</div>
 			</div>
@@ -407,34 +406,59 @@
 				<!-- CONTENT -->
 				<div class="col-md-9">
 					<!-- BEGIN TOP PRODUCTS -->
-					<div class="store-top-product view-product-by-cat">
-						<h4>Electronic devices</h4>
+					<div class="store-top-product">
+						<h4>Tìm kiếm hàng đầu</h4>
 
-						<div class="sort">
-							<span>Sort By:</span>
-							<div class="custom-slb">
-								<select>
-									<option value="0">No Sort</option>
-									<option value="1" selected>Newest</option>
-									<option value="2">Average Rating</option>
-									<option value="3">Popularity</option>
-									<option value="4">Newess</option>
-									<option value="5">Product Name: Z</option>
-								</select>
-							</div>
-
-							<div class="custom-slb">
-								<select>
-									<option value="0">Price &#8593;</option>
-									<option value="1">Low to high</option>
-									<option value="2">High to low</option>
-								</select>
-							</div>
-
-							<div class="filter-btn pull-right">
-								<a href="#" data-toggle="modal" data-target="#filterModal"><img src="assets/images/icons-category/filter.png"></a>
-							</div>
-						</div>
+						<ul class="search-top-cat">
+							<li>
+								<a class="active" href="#">
+									<img src="assets/images/img30.jpg">
+									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="assets/images/img29.jpg">
+									<h4 class="wrap-line w-break">Túi sách</h4>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="assets/images/img25.png">
+									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="assets/images/img30.jpg">
+									<h4 class="wrap-line w-break">Giầy dép</h4>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="assets/images/img29.jpg">
+									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="assets/images/img24.png">
+									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="assets/images/img25.png">
+									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="assets/images/img24.png">
+									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+								</a>
+							</li>
+						</ul>
 
 						<!-- BEGIN LIST PRODUCT -->
 						<div class="row custom-col-5">
@@ -443,14 +467,13 @@
 								<div class="product-item">
 									<a href="#">
 										<img src="assets/images/img4.png">
-										<span class="sale-label">-34%</span>
-										<span class="tag-lbl">Hàng cũ</span>
+										<span class="tag-lbl">Top <span>1</span></span>
 									</a>
 									<div class="product-info">
 										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+										<div class="p-sold">Bán mỗi tháng: 345</div>
 										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
+											<span>1,989,000đ - 2,195,000đ</span>
 										</div>
 									</div>
 								</div>
@@ -461,13 +484,13 @@
 								<div class="product-item">
 									<a href="#">
 										<img src="assets/images/img5.png">
-										<span class="sale-label">-34%</span>
+										<span class="tag-lbl">Top <span>2</span></span>
 									</a>
 									<div class="product-info">
 										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+										<div class="p-sold">Bán mỗi tháng: 345</div>
 										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
+											<span>1,989,000đ</span>
 										</div>
 									</div>
 								</div>
@@ -478,166 +501,13 @@
 								<div class="product-item">
 									<a href="#">
 										<img src="assets/images/img6.png">
-										<span class="sale-label">-34%</span>
+										<span class="tag-lbl">Top <span>3</span></span>
 									</a>
 									<div class="product-info">
 										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+										<div class="p-sold">Bán mỗi tháng: 345</div>
 										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img7.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img8.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img4.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img5.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img6.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img7.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img8.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img4.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
-										</div>
-									</div>
-								</div>
-								<!-- /END PRODUCT ITEM -->
-							</div>
-							<div class="col-5">
-								<!-- PRODUCT ITEM -->
-								<div class="product-item">
-									<a href="#">
-										<img src="assets/images/img5.png">
-										<span class="sale-label">-34%</span>
-									</a>
-									<div class="product-info">
-										<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
-										<div class="product-meta">
-											<span>$125,00</span>
-											<span class="sale">$225,00</span>
+											<span>193,989,000đ</span>
 										</div>
 									</div>
 								</div>
@@ -645,19 +515,6 @@
 							</div>
 						</div>
 						<!-- /END LIST PRODUCT -->
-
-						<div class="clearfix"></div>
-						<div class="col-md-12 txt-right">
-							<!-- BEGIN PAGINATION -->
-							<ul class="pagination">
-								<li class="prev"><a href="#"><i class="fa fa-angle-left"></i></a></li>
-								<li><a href="#">1</a></li>
-								<li><a href="#">2</a></li>
-								<li><a href="#">3</a></li>
-								<li class="last"><a href="#"><i class="fa fa-angle-right"></i></a></li>
-							</ul>
-							<!-- /END PAGINATION -->
-						</div>
 					</div>
 					<!-- /END TOP PRODUCTS -->
 				</div>
