--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -145,6 +145,7 @@
 						<li><a href="NEW_DESIGN/mobile/product-favorite.html">Favorite Products</a></li>
 						<li><a href="NEW_DESIGN/mobile/store-follower.html">Store Follower</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-product-top.html">Search Product Top</a></li>
+						<li><a href="NEW_DESIGN/mobile/download.html">Download</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
