--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -424,6 +424,18 @@
 				</div>				
 			</div>
 		</div>
+
+		<hr style="border:2px solid #aaa">
+
+		<div id="pharse9" class="row">
+			<div class="col-md-6">
+				<div class="admin">
+					<ul>
+						<li><a href="admin-footer.html">Footer</a></li>
+					</ul>
+				</div>				
+			</div>
+		</div>
 	</div>
 
 	<!-- /END WRAPPER -->
@@ -436,6 +448,7 @@
 		<li><a href="#pharse6">Pharse 6</a></li>
 		<li><a href="#pharse7">Pharse 7</a></li>
 		<li><a href="#pharse8">Pharse 8</a></li>
+		<li><a href="#pharse8">Pharse 9</a></li>
 	</ul>
 
 </body>
