--- a/3B-NEW/admin-footer-add-edit.html
+++ b/3B-NEW/admin-footer-add-edit.html
@@ -436,7 +436,7 @@
 										<div class="col-md-12">
 											<div class="form-group">
 												<label>Nội dung</label>
-												<textarea class="form-control" rows="6" placeholder="Nội dung"></textarea>
+												<textarea id="footer-content" class="form-control" rows="6" placeholder="Nội dung"></textarea>
 											</div>
 										</div>
 										<div class="col-md-12">
@@ -492,6 +492,11 @@
 	<script src="assets/plugins/daterangepicker/moment.js"></script>
 	<script src="assets/plugins/daterangepicker/datetimepicker.min.js"></script>
 	<script src="assets/plugins/select2/select2.full.min.js"></script>
+	<script src="assets/plugins/ckeditor/ckeditor.js"></script>
 	<script src="assets/js/base.min.js"></script>
+
+	<script type="text/javascript">
+		CKEDITOR.replace( 'footer-content' );
+	</script>
 </body>
 </html>
