3B - NEW_DESIGN - FLASH_SALE_ONGOING_MOBILE - update text button

--- a/3B-WEB/NEW_DESIGN/mobile/flash-sale-ongoing.html
+++ b/3B-WEB/NEW_DESIGN/mobile/flash-sale-ongoing.html
@@ -229,7 +229,7 @@
 								<span class="p-old wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 								<span class="p-sale wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 							</div>
-							<a href="#" class="btn btn-purple">Tìm hiểu thêm</a>
+							<a href="#" class="btn btn-purple">Mua ngay</a>
 						</div>
 
 						<div class="p-sold">
@@ -257,7 +257,7 @@
 								<span class="p-old wrap-line w-break">100,989,000đ</span>
 								<span class="p-sale wrap-line w-break">300,989,000đ</span>
 							</div>
-							<a href="#" class="btn btn-purple">Tìm hiểu thêm</a>
+							<a href="#" class="btn btn-purple">Mua ngay</a>
 						</div>
 
 						<div class="p-sold">
@@ -285,7 +285,7 @@
 								<span class="p-old wrap-line w-break">1,989,000đ - 2,195,000đ</span>
 								<span class="p-sale wrap-line w-break">989,000đ - 3,195,000đ</span>
 							</div>
-							<a href="#" class="btn btn-purple">Tìm hiểu thêm</a>
+							<a href="#" class="btn btn-purple">Mua ngay</a>
 						</div>
 
 						<div class="p-sold">
@@ -313,7 +313,7 @@
 								<span class="p-old wrap-line w-break">100,989,000đ</span>
 								<span class="p-sale wrap-line w-break">989,000đ</span>
 							</div>
-							<a href="#" class="btn btn-purple">Tìm hiểu thêm</a>
+							<a href="#" class="btn btn-purple">Mua ngay</a>
 						</div>
 
 						<div class="p-sold">
